# junk-cleaner

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.html  install.ps1  install.sh  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml  security-audit.yml
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: dev_scanner.rs  junk_catalog.rs  lib.rs  main.rs  model_dedup.rs  ollama.rs  scanner.rs  uninstaller.rs
src/components/: AppUninstallerModal.tsx  ChatView.tsx  DevCleanupView.tsx  DiskTree.tsx  JunkView.tsx  ModelDuplicatesView.tsx  OllamaOnboarding.css  OllamaOnboarding.tsx  ScanPanel.tsx  SystemReportModal.tsx
src/hooks/: useScanner.ts
