[package]
name = "junk-cleaner"
version = "0.1.0"
description = "Smart cross-platform disk cleaner with AI junk detection"
authors = ["JunkCleaner"]
edition = "2021"

[lib]
name = "junk_cleaner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
rayon = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
jwalk = "0.8"
dashmap = "6.1.0"
plist = "1.8.0"
sha2 = "0.10.9"
sysinfo = "0.38.3"

